--- a/algorithm description/algorithmDescription.tex
+++ b/algorithm description/algorithmDescription.tex
@@ -64,7 +64,7 @@ In \textit{findAndMarkSuccessor} stage, a seek is done to identify the successor
 
 The \textit{removeSuccessor} stage starts with the following assertions: the delete operation is of complex type, the \textit{deleteFlag} was set on the left and right child of the node undergoing deletion, the successor node has been found and promote flag has been set on its left and right children, the address of the node undergoing deletion is copied to the left child of the successor node and finally the successor key with the mark bit set has been copied to the node undergoing deletion. Let \textit{succNode} denote the successor node and \textit{succParent} denote its parent node. To remove the successor, a CAS instruction tries to replace the edge (\textit{R$\rightarrow$succParent},\textit{R$\rightarrow$succNode}) with the edge (\textit{R$\rightarrow$succParent},\textit{R$\rightarrow$succNode$\rightarrow$rightChild}). CAS also removes the promote flag on the right child. Here we need to take care of a special case where the successor is the immediate right child of the node under deletion. In this case the \textit{succNode} will be the right child of \textit{succParent} and \textit{succParent} is the node under deletion. The \textit{deleteFlag} will be set on the edge (\textit{R$\rightarrow$succParent},\textit{R$\rightarrow$succNode}). So during CAS this \textit{deleteFlag} has to be copied as well. If CAS fails, then shallowHelp or deepHelp routine has to be invoked appropriately as discussed in \textit{findAndMarkSuccessor} stage. After helping the delete operation re-tries to remove the successor. If the CAS is successful, then the \textit{readyToReplace} flag is set on the node undergoing deletion to indicate that the successor node has been removed and the mode is changed to cleanup.
 
-In the cleanup mode, for a complex delete, the delete operation uses a CAS instruction to install a fresh copy of the node. A new node is created. The key from the old node is copied to the new node with the mark bit cleared, the left and right child addresses are copied with the \textit{deleteFlag} bit cleared and the \textit{readyToReplace} flag is cleared as well. Now a CAS instruction tries to replace the edge (\textit{R$\rightarrow$parent},\textit{R$\rightarrow$node}) with the edge (\textit{R$\rightarrow$parent},\textit{R$\rightarrow$newNode}). If the CAS fails, then deepHelp routine is invoked to help a concurrent delete operation if needed. Then the cleanup step is retried. If the CAS is successful, then the delete operation is completed.
+In the cleanup mode, for a complex delete, the delete operation uses a CAS instruction to install a fresh copy of the node. A new node is created. The key from the old node is copied to the new node with the mark bit cleared, the left and right child addresses are copied with the \textit{deleteFlag} bit cleared and the \textit{readyToReplace} flag is cleared as well. Now a CAS instruction tries to replace the edge (\textit{R$\rightarrow$parent},\textit{R$\rightarrow$node}) with the edge (\textit{R$\rightarrow$parent},\textit{R$\rightarrow$newNode}). If CAS fails, then deepHelp routine is invoked to help a concurrent delete operation if needed. Then the cleanup step is retried. If the CAS is successful, then the delete operation is completed.
 
 
 \subsection{Other Concurrent Binary Search Tree Implementations}
