--- a/algorithm description/alg.tex
+++ b/algorithm description/alg.tex
@@ -9,22 +9,36 @@
 \newcommand{\parent}{$parent$}
 \newcommand{\lastUParent}{$lastUParent$}
 \newcommand{\lastUNode}{$lastUNode$}
+\newcommand{\injectionPoint}{$injectionPoint$}
 \newcommand{\mode}{$mode$}
 \newcommand{\type}{$type$}
 \newcommand{\seekRecord}{$seekRec$}
 \newcommand{\mySeekRecord}{$mySeekRec$}
 \newcommand{\state}{$state$}
 \newcommand{\myState}{$myState$}
+\newcommand{\lastRNode}{$anchorNode$}
+\newcommand{\lastRKey}{$anchorKey$}
+\newcommand{\cSeek}{$cSeek$}
+\newcommand{\pSeek}{$pSeek$}
+\newcommand{\cKey}{$cKey$}
 \newcommand{\nKey}{$nKey$}
+\newcommand{\pKey}{$pKey$}
 \newcommand{\which}{$which$}
+\newcommand{\pWhich}{$pWhich$}
+\newcommand{\nWhich}{$nWhich$}
 \newcommand{\address}{$address$}
-\newcommand{\result}{$result$}
+\newcommand{\result}{$out$}
 \newcommand{\newNode}{$newNode$}
 \newcommand{\needToHelp}{$needToHelp$}
 \newcommand{\Left}{$left$}
+\newcommand{\Right}{$right$}
 \newcommand{\key}{$key$}
 \newcommand{\lN}{$lN$}
 \newcommand{\rN}{$rN$}
+\newcommand{\prev}{$prev$}
+\newcommand{\curr}{$curr$}
+\newcommand{\dFlag}{$dFlg$}
+\newcommand{\done}{$done$}
 \newcommand{\return}{\textbf{return }}
 \newcommand{\Break}{\textbf{break}}
 \newcommand{\True}{\textbf{true}}
@@ -41,14 +55,15 @@ $\{$\textbf{Boolean},\textbf{Boolean},\textbf{Boolean},NodePtr$\}$ \child[2]\;
 \Indm $\}$\;
 
 struct seekRecord$\{$\\
-\Indp NodePtr \node\;
+\Indp NodePtr \node;
 NodePtr \parent\;
-NodePtr \lastUParent\;
+NodePtr \lastUParent;
 NodePtr \lastUNode\;
+NodePtr \injectionPoint\;
 \Indm $\}$\;
 
 struct State$\{$\\
-\Indp NodePtr \node\;
+\Indp NodePtr \node;
 NodePtr \parent\;
 Key $key$\;
 \textbf{enum} \mode $\{$ INJECTION, DISCOVERY, CLEANUP $\}$\;
@@ -72,11 +87,11 @@ $\langle$*, \nKey$\rangle$ := \mySeekRecord$\rightarrow$\node$\rightarrow$\markA
 \lIf{$key$ = \nKey} {\return \False}
 \newNode := create a new node and initialize its fields\;
 \which \space := $key$ $<$ \nKey \space $?$ LEFT: RIGHT\;
-$\langle$*,*,*,\address$\rangle$ := \node$\rightarrow$\child[\which]\;
+$\langle$*,*,*,\address$\rangle$ := \mySeekRecord$\rightarrow$\injectionPoint\;
 \result := CAS(\node$\rightarrow$\child[\which],$\langle$1,0,0,\address$\rangle$,$\langle$0,0,0,\newNode$\rangle$)\;
 \lIf{\result}{\return \True}
-$\langle$*,$d$,$p$,\address$\rangle$ := \node$\rightarrow$\child[\which]\;
-\lIf{\textbf{not} ($d$ or $p$)} {\textbf{continue}}
+$\langle$*,$d$,$p$,\address$\rangle$ := \node$\rightarrow$\child[\which]; \tcp{find out why the CAS failed}
+\lIf ( // CAS failed due to another insert op){\textbf{not} ($d$ or $p$)} {\textbf{continue}}
 deepHelp(\mySeekRecord$\rightarrow$\lastUNode,\mySeekRecord$\rightarrow$\lastUParent)\;
 }
 \end{algorithm}
@@ -183,6 +198,97 @@ $\langle$\rN,*,*,*$\rangle$ := \node$\rightarrow$\child[RIGHT]\;
 	\lElse{\state$\rightarrow$\mode := DISCOVERY}
 }
 \return\;
+\end{algorithm}
+%-------------------------------------------------------------------------------------------------------------------
+\begin{algorithm}[Hf]
+\caption{findSmallest(\node,\Right,\seekRecord)} 
+\tcp{find the smallest key in the subtree rooted at the right child}
+\lastUParent := \node; \lastUNode := \Right; \prev := \node; \curr := \Right\;
+\While{\True}
+{
+	$\langle$n,$d$,$p$,\Left$\rangle$ := \curr$\rightarrow$\child[LEFT]\;
+	\lIf{n}{\textbf{break}}
+	\prev := \curr; \curr := \Left; \tcp{ traverse the next edge}
+	\If( // keep track of the last unmarked edge){\textbf{not} ($d$ or $p$)}
+	{
+		\lastUParent := \prev; \lastUNode := \curr
+	}
+	\tcp{update the seek record}
+	\Return\;
+}
+\end{algorithm}
+%-------------------------------------------------------------------------------------------------------------------
+\begin{algorithm}[Hf]
+\caption{cleanup(\state,\dFlag)} 
+\tcp{retrieve the addresses from the state record}
+\pWhich := edge of the parent which needs to be switched\;
+\If{\state$\rightarrow$\type = COMPLEX}
+{
+	\newNode := a new copy of the node in which all the fields are unmarked\;
+	\tcp{try to switch the edge at the parent}
+	\result := CAS(\parent$\rightarrow$\child[\pWhich],$\langle$0,\dFlag,0,\node$\rangle$,$\langle$0,\dFlag,0,\newNode$\rangle$)\;
+}
+\Else
+{
+	\nWhich := non-Null child of the node being deleted\;
+	$\langle$n,*,*,\address$\rangle$ := \node$\rightarrow$\child[\nWhich]\;
+	\If( // set only the null flag; do not change the address){n}
+	{
+		\result := CAS(\parent$\rightarrow$\child[\pWhich],$\langle$0,\dFlag,0,\node$\rangle$,$\langle$1,\dFlag,0,\node$\rangle$)\;
+	}
+	\Else( // change the address here by switching the pointer)
+	{
+		\result := CAS(\parent$\rightarrow$\child[\pWhich],$\langle$0,\dFlag,0,\node$\rangle$,$\langle$0,\dFlag,0,\address$\rangle$)\;
+	}
+}
+\return \result\;
+\end{algorithm}
+%-------------------------------------------------------------------------------------------------------------------
+\begin{algorithm}[Hf]
+\caption{seek(\key,\seekRecord)} 
+\While{\True}
+{
+	\tcp{create two local seek records:\cSeek (current seek record) and \pSeek (previous seek record) used for the traversal}
+	\While{\True}
+	{
+		$\langle$*,\cKey$\rangle$ := \curr$\rightarrow$\markAndKey; \tcp{key in the \curr \space of \cSeek}
+		\If( // key found; stop the traversal){\key = \cKey}{\done := \True; \Break\;}
+		\which := \key $<$\cKey \space ? LEFT: RIGHT\;
+		$\langle$n,$d$,$p$,\address$\rangle$ := \curr$\rightarrow$\child[\which]; \tcp{ read the next edge}
+		\If( // null flag is set; reached a leaf node){n}
+		{
+			\If{key stored in \lastRNode \space has not changed}
+			{
+				\done := \True; \Break; \tcp{use data from \cSeek}
+			}
+			\ElseIf{\lastRNode of \cSeek \space $\&$ \pSeek \space matches}
+			{
+				\done := \True; \Break; \tcp{use data from \pSeek}
+			}
+			\Else
+			{
+				\Break; \tcp{after copying \cSeek \space to \pSeek}
+			}
+		}
+		\If( // next edge to be traversed is a right edge){\which = RIGHT}
+		{
+			\lastRNode := \curr; \tcp{ keep track of curr node}
+			\lastRKey := \cKey; \tcp{and its key}
+		}
+		\prev := \curr;
+		\curr : = \address; \tcp{traverse the next edge}
+		\If( // keep track the last unmarked edge){\textbf{not} ($d$ or $p$)}
+		{
+			\lastUParent := \prev;
+			\lastUNode := \curr;
+		}		
+	}
+	\If{\done}
+	{
+		\tcp{initialize the appropriate seek record (\cSeek \space or \pSeek)}
+		\Return\;
+	}
+}
 \end{algorithm}
 \end{document}
 
