--- a/algorithm description/experiments-graphs.tex
+++ b/algorithm description/experiments-graphs.tex
@@ -1,7 +1,9 @@
 \newpage
 \begin{tikzpicture}
-	\begin{groupplot}[group style={group size= 2 by 4},height=5cm,width=6.4cm]
-		\nextgroupplot[title=Read-Dominated,ylabel={keyrange: 1K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+\footnotesize
+%\scriptsize
+	\begin{groupplot}[group style={group size= 2 by 4},height=5cm,width=6.08cm]
+		\nextgroupplot[title=Read-Dominated,ylabel={\small keyrange: \small 1K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat}; \label{plots:HJ-BST}
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat}; \label{plots:NM-BST}
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat}; \label{plots:RM-BST}
@@ -10,7 +12,7 @@
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
-		\nextgroupplot[ylabel={keyrange: 10K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+		\nextgroupplot[ylabel={\small keyrange: \small 10K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
@@ -18,7 +20,7 @@
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
-		\nextgroupplot[ylabel={keyrange: 100K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+		\nextgroupplot[ylabel={\small keyrange: \small 100K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
@@ -26,7 +28,7 @@
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
-		\nextgroupplot[xlabel={Number of Threads},ylabel={keyrange: 1M},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+		\nextgroupplot[xlabel={Number of Threads},ylabel={\small keyrange: \small 1M},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
@@ -36,7 +38,8 @@
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
 				\coordinate (bot) at (rel axis cs:0,0);% coordinate at bottom of the last plot
 	\end{groupplot}
-	\path (top-|current bounding box.west)-- node[anchor=south,rotate=90] {Throughput (million ops/sec)} (bot-|current bounding box.west);
+	%\path (top-|current bounding box.west)-- node[anchor=south,rotate=90] {\small Throughput (million ops/sec)} (bot-|current bounding box.west);
+	\node[right,rotate=90] at (-1.4,-7.2){\small ~Throughput (million ops/sec)};
 	\path (top|-current bounding box.north)-- coordinate(legendpos) (bot|-current bounding box.north);
 	\matrix[matrix of nodes, anchor=south, draw, inner sep=0.2em, draw] at ([yshift=1ex]legendpos)
   {
@@ -47,27 +50,28 @@
 \end{tikzpicture}
 \newpage
 \begin{tikzpicture}
-	\begin{groupplot}[group style={group size= 1 by 4},height=5cm,width=6.4cm]
-		\nextgroupplot[title=Write-Dominated,ylabel={keyrange: 1K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+	\begin{groupplot}[group style={group size= 1 by 4},height=5cm,width=6.08cm]
+		\nextgroupplot[title=Write-Dominated,ylabel={\small keyrange: 1K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat}; 
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat}; 
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat}; 
 				\coordinate (top) at (rel axis cs:0,1);% coordinate at top of the first plot
-		\nextgroupplot[ylabel={keyrange: 10K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+		\nextgroupplot[ylabel={\small keyrange: 10K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
-		\nextgroupplot[ylabel={keyrange: 100K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+		\nextgroupplot[ylabel={\small keyrange: 100K},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
-		\nextgroupplot[xlabel={Number of Threads},ylabel={keyrange: 1M},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
+		\nextgroupplot[xlabel={Number of Threads},ylabel={\small keyrange: 1M},symbolic x coords={1,2,4,8,16,32,64,128},xtick=data]
 				\addplot[red,mark=triangle] 	table{Data/HJ-BST.dat};
 				\addplot[blue,mark=asterisk] 	table{Data/NM-BST.dat};
 				\addplot[green,mark=square] 	table{Data/RM-BST.dat};
 				\coordinate (bot) at (rel axis cs:0,0);% coordinate at bottom of the last plot
 	\end{groupplot}
-	\path (top-|current bounding box.west)-- node[anchor=south,rotate=90] {Throughput (million ops/sec)} (bot-|current bounding box.west);
+	%\path (top-|current bounding box.west)-- node[anchor=south,rotate=90] {Throughput (million ops/sec)} (bot-|current bounding box.west);
+	\node[right,rotate=90] at (-1.4,-7.2){\small ~Throughput (million ops/sec)};
 	\path (top|-current bounding box.north)-- coordinate(legendpos) (bot|-current bounding box.north);
 	\matrix[matrix of nodes, anchor=south, draw, inner sep=0.2em, draw] at ([yshift=1ex]legendpos)
   {
